# Regalia

./: About"v18.x.x".md  BUILDING.md  CONTRIBUTING-en.md  CONTRIBUTING-zh.md  LICENSE-AGPL v3  LICENSE-GPL v3  LICENSE-GPL v3.md  NOTICE  NOTICE-DroidFish  NOTICE-DroidFish.md  NOTICE-gradle  PRIVACY.md  README.md  SECURITY_FIXES.md  UBIQUITOUS_LANGUAGE.md  build-chess.py  build-chess.sh  build.gradle  gradle.properties  lint.xml  manual-en.html  manual-zh.html  proguard-rules.pro  settings.gradle  worklog.md
.github/: PULL_REQUEST_TEMPLATE-en.md  PULL_REQUEST_TEMPLATE-zh.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android-ci.yml  apisec-scan.yml  black-duck-security-scan-ci.yml  codeql.yml  contrast-scan.yml  endorlabs.yml  fortify.yml  greetings.yml  issue-auto-label.yml  mobsf.yml  neuralegion.yml  ossar.yml  pmd.yml  release-helper.yml  semgrep.yml  stale.yml  unzip-folder-optimized.yml  unzip-folder.yml  veracode.yml
Manual/: README.license  Regalia-1.0.1-manual-en.html  Regalia-1.0.1-manual-zh.html  Regalia-v1.0.0-manual-en.html  Regalia-v1.0.0-manual-zh.html  Regalia-v1.0.2-manual-zh.html  Regalia-v1.0.4-manual-en.html  Regalia-v1.0.4-manual-zh.html  Regalia-v1.0.5-manual-en.html  Regalia-v1.0.5-manual-zh.html  Regalia-v1.0.6-manual-en.html  Regalia-v1.0.6-manual-zh.html  Regalia-v1.0.7-manual-en.html  Regalia-v1.0.7-manual-zh.html  Regalia-v1.0.8-manual-en.html  Regalia-v1.0.8-manual-zh.html  Regalia-v1.0.9-manual-en.html  Regalia-v1.0.9-manual-zh.html  Regalia-v1.1.0-manual-en.html  Regalia-v1.1.0-manual-zh.html  Regalia-v1.1.1-manual-en.html  Regalia-v1.1.1-manual-zh.html  Regalia-v1.1.2-manual-en.html  Regalia-v1.1.2-manual-zh.html  Regalia-v1.2.0-manual-en.html  Regalia-v1.2.0-manual-zh.html  Regalia-v1.2.1-manual-en.html  Regalia-v1.2.1-manual-zh.html  Regalia-v1.2.2-manual-en.html  Regalia-v1.2.2-manual-zh.html  Regalia-v1.2.3-manual-en.html  Regalia-v1.2.3-manual-zh.html
assets/: README.license
lib/arm64-v8a/: README.license
regalia-security-fixes/src/main/java/com/Regalia/: StockfishNative.java
src/main/: AndroidManifest.xml  README.license
src/main/assets/: README.license  chess.html  stats.html
src/main/assets/chess.src/: README.license  ai-bridge.js  chess960.js  eco-data.js  game-logic.js  index.html.tpl  pgn-standard.js  state-store.js  tablebase.js  ui-audio.js  ui-board.js  ui-gameflow.js  ui-interactions.js  ui-review.js  ui-toolbar.js  ui.js  worker-pool.js
src/main/cpp/: CMakeLists.txt  README.license  engine_jni.cpp
src/main/java/com/Regalia/: ChessApp.java  ChessWebViewClient.java  EngineConfigHelper.java  EngineConfigManager.java  EngineHealthMonitor.java  EngineProcessManager.java  EngineService.java  EngineSettingsHelper.java  FileIoHelper.java  HapticHelper.java  HapticManager.java  JsBridgeGateway.java  MainActivity.java  MessageBus.java  PermissionHelper.java  PgnCacheManager.java  README.license  RootDetector.java  SafPickerHelper.java  StabilizationHelper.java  StatsActivity.java  StockfishNative.java  TlsSecurityHelper.java  UciProtocolHandler.java
src/main/res/: README.license
src/main/res/values/: strings.xml
src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
